# CppGame

./: CMakeLists.txt
src/: main.cpp
src/SceneManager/: button.hpp  character.cpp  character.hpp
